<resources>
    <string name="app_name">Guiado pela Fé</string>
    <string name="name_edit">Nome</string>
    <string name="logo_do_aplicativo">Guiado pela Fé</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="validaTelefone">(XX) XXXXX-XXXX</string>
    <string name="confirmar_n_mero">Confirmar Número</string>
    <string name="ativar_notifica_es">Ativar Notificações</string>
    <string name="notifica_es_desativadas">Notificações desativadas</string>
    <string name="texto_ser_exibido_aqui">Texto será exibido aqui</string>

    <!-- Alterações feitas aqui para Igrejas -->
    <string name="adicionar_igreja1">Adicionar Igreja</string>
    <string name="trocar_adicionar_filtrar">Trocar Adicionar/Filtrar Igrejas</string>
    <string name="mapas_de_igrejas">Mostrar Igrejas Disponiveis</string>
    <string name="digite_algo">Digite algo</string>
    <string name="mostrar_igrejas_unicas">Mostrar Igrejas Únicas</string>

    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="exibir_texto">Exibir Texto</string>
    <string name="adicionar_igreja">adicionar igreja</string>
    <string name="ver_igreja">Ver Igreja</string>
    <string name="informacoes_igreja">Informações da Igreja</string>


</resources>
