<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- TextView de Boas-Vindas -->
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/phoneEditText"
        android:layout_marginBottom="8dp" />

    <!-- EditText para número de telefone -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/validaTelefone"
        android:inputType="phone"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirmButton"
        android:layout_marginBottom="4dp" /> <!-- Reduzir o marginBottom aqui -->

    <!-- Botão de Confirmação -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_n_mero"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/notificationsSwitch"
    android:layout_marginBottom="8dp"
    style="@style/customButton" />

    <!-- Switch para notificações -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationsSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ativar_notifica_es"
        app:layout_constraintTop_toBottomOf="@id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/notificationStatusTextView"
        android:layout_marginBottom="8dp"
        style="@style/CustomSwitchStyle" />

    <!-- TextView de status de notificações -->
    <TextView
        android:id="@+id/notificationStatusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notifica_es_desativadas"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/notificationsSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
